added alerts popup

--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -144,7 +144,7 @@
             <div class="tooltip-content"></div>
             <div class="tooltip-triangle"></div>
         </div>
-        <div class="alerts-pop-up"></div>
+        <div class="alerts-pop-up popup-bubble"></div>
         @RenderSection("MixPanelTracking", false)
         
 <script type="text/json" id="application-value" class="valuable-script">
