--- a/Chalkable.Web/assets/jade/activities/attendance/StudentAttendance.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/StudentAttendance.jade
@@ -30,7 +30,7 @@ div(
             .button-like(class=needDropdown ? "with-dropdown" : '').current-attendance=name
             BUTTON(href="javascript:", type="button", value="rightArrow").right-arrow &gt;
         if value > valuesEnum.PRESENT.valueOf()
-            .combo-list.no-row-click.chat-bubble.top
+            .combo-list.no-row-click.popup-bubble.top
                 input.combo-input.x-zero
                 .connector
                 firstSelected = true
