--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekDayPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekDayPopUp.jade
@@ -1,4 +1,4 @@
-.calendar-popup.chat-bubble
+.calendar-popup.popup-bubble
     announcements = self.getAnnouncements();
     period = self.getPeriod();
     roomNumber = self.getRoomNumber();
