--- a/Chalkable.Web/assets/jade/activities/notification/ListNewPopup.jade
+++ b/Chalkable.Web/assets/jade/activities/notification/ListNewPopup.jade
@@ -1,4 +1,4 @@
-.list-new.chat-bubble.top
+.list-new.popup-bubble.top
     if self.getNotifications().getItems().length > 0
         each item in self.getNotifications().getItems()
             .row
