--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
@@ -45,7 +45,7 @@ getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value,
                         if !readonly
                             .grade-options.selected
                                 +ActionLink('grading', 'getGradeComments').comment-text= (item.getComment() ? Msg.Commented : Msg.Comment)
-                                .small-pop-up.chat-bubble.top
+                                .small-pop-up.popup-bubble.top
                                     +TextArea(name="comment", maxlength=500, data-comment=item.getComment(), placeholder=Msg.Enter_when_done).comment-input.with-grid-focus= item.getComment()
                                     .grading-comments-list
                     div(id = "grade-container-" + item.getStudentInfo().getId()).i-b.grade-block
