--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthDayPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthDayPopUp.jade
@@ -1,4 +1,4 @@
-.calendar-popup.chat-bubble.top
+.calendar-popup.popup-bubble.top
     announcements = self.getAnnouncements();
     items = self.getItems();
     if announcements.length > 0
