--- a/Chalkable.Web/assets/sass2/5_dialogs/_add-standards-dialog.sass
+++ b/Chalkable.Web/assets/sass2/5_dialogs/_add-standards-dialog.sass
@@ -6,8 +6,9 @@
 
   .header
     text-align: center
-    background: #f7f7f5
+    background: #F8E6A4
     padding-bottom: 20px
+    color: #BCAA53
 
   h1
     font-size: 18px
@@ -92,7 +93,10 @@
   .buttons-container
     text-align: right
     padding: 10px 35px 10px 0
-    background: #f7f7f5
+    background: #F8E6A4
+
+    > *
+      margin: 0 3px
 
   .special-button2
     button
