--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -24,6 +24,7 @@
 @import "2_atoms/validation"
 @import "2_atoms/tooltip"
 @import "2_atoms/checkbox"
+@import "2_atoms/form"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
@@ -41,6 +42,8 @@
 @import "3_molecules/grading-items"
 @import "3_molecules/chart"
 @import "3_molecules/glance-box"
+
+@import "5_dialogs/add-message"
 
 @import "6_popups/list-new-popup"
 
