--- a/Chalkable.Web/assets/sass2/3_molecules/_dialog.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_dialog.sass
@@ -2,9 +2,9 @@
   position: fixed
   z-index: 1005
   background: #fff
-  border-radius: 5px
+  //border-radius: 5px
   overflow: hidden
-  +box-shadow(transparentize(#000, .8) 0 0 5px)
+  +box-shadow(transparentize(#000, .8) 0 2px 16px)
   transform: translate(-50%, -50%)
 
   //opacity: 0
@@ -19,8 +19,6 @@
   left: 50%
 
   h1
-    background: #f7f7f5
-    border-bottom: 1px solid #e6e7e2
     height: 62px
     line-height: 58px
     font-size: 18px
@@ -47,6 +45,17 @@
 
       &:not(:last-child)
         margin-right: 10px
+
+  .x-window-body
+    margin: 25px
+
+  .x-window-header
+    background: #F8E6A4
+    text-align: center
+
+    SPAN, h1
+      line-height: 62px
+      color: #BCAA53
 
 
 .base-attachment-dialog .iframe-wrap
