more dialogs styling

--- a/Chalkable.Web/Content/2_atoms/form.css
+++ b/Chalkable.Web/Content/2_atoms/form.css
@@ -11,11 +11,11 @@
 }
 
 /* line 10, ../../assets/sass2/2_atoms/form.sass */
-.form-buttons {
+.form-buttons, .buttons-container {
   margin-top: 10px;
   text-align: center;
 }
 /* line 14, ../../assets/sass2/2_atoms/form.sass */
-.form-buttons > * {
+.form-buttons > *, .buttons-container > * {
   margin: 0 3px;
 }
