--- a/Chalkable.Web/assets/sass2/3_molecules/_dialog.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_dialog.sass
@@ -5,7 +5,7 @@
   //border-radius: 5px
   overflow: hidden
   +box-shadow(transparentize(#000, .8) 0 2px 16px)
-  transform: translate(-50%, -50%)
+  transform: translate(-50%, -30%)
 
   //opacity: 0
   //&.visible
@@ -15,7 +15,7 @@
   .under-overlay > &
     z-index: 998
 
-  top: 50%
+  top: 30%
   left: 50%
 
   h1
@@ -115,3 +115,7 @@
 
   &:hover
     opacity: 0.8
+
+
+.info-msg-dialog .dialog
+  padding: 25px
