--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -43,7 +43,7 @@
 @import "3_molecules/chart"
 @import "3_molecules/glance-box"
 
-@import "5_dialogs/add-message"
+@import "5_dialogs/_add-message"
 
 @import "6_popups/list-new-popup"
 
