--- a/Chalkable.Web/assets/jade/activities/messages/ViewDialog.jade
+++ b/Chalkable.Web/assets/jade/activities/messages/ViewDialog.jade
@@ -12,8 +12,8 @@
                     +TextArea()(readonly).text=self.body
                 br
                 .form-buttons
-                    +ActionLinkButton('message', 'sendPage', self.isInbox(), self.id).button-like.blue-button.submit-btn= self.isReplay() ? 'Reply' : 'Send'
-                    a(href="javascript:").button-like.cancel-button.close=Msg.Cancel
+                    +ActionButton('message', 'sendPage', self.isInbox(), self.id).blue-button.submit-btn= self.isReplay() ? 'Reply' : 'Send'
+                    BUTTON.cancel-button.close=Msg.Cancel
 
     .bg-bottom
 
