--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -42,6 +42,7 @@
 @import "3_molecules/grading-items"
 @import "3_molecules/chart"
 @import "3_molecules/glance-box"
+@import "3_molecules/paginator-container"
 
 @import "5_dialogs/_add-message"
 
