--- a/Chalkable.Web/assets/sass2/0_ephir/_body.sass
+++ b/Chalkable.Web/assets/sass2/0_ephir/_body.sass
@@ -7,6 +7,9 @@ body
   min-width: 1200px
   font-size: 13px
 
+  overflow-x: hidden
+  overflow-y: scroll
+
 
 .x-hidden
   display: none !important
