fixes to bottom panels

--- a/Chalkable.Web/assets/sass2/demo.sass
+++ b/Chalkable.Web/assets/sass2/demo.sass
@@ -1,3 +1,5 @@
+@import "compass/css3/box-shadow"
+
 #page
   margin-bottom: 65px
 
@@ -11,6 +13,8 @@
   padding: 20px
   background: #fff
   border-top: 1px solid #c8c7c3
+
+  +box-shadow(transparentize(#000, .8) 0 2px 16px)
 
   .left
     float: left
