--- a/Chalkable.Web/assets/sass2/4_pages/_seating-chart-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_seating-chart-page.sass
@@ -106,6 +106,7 @@
   right: 0
   border-top: 1px solid #c8c7c3
   z-index: 299
+  +box-shadow(transparentize(#000, .8) 0 2px 16px)
 
   .student-block
     display: inline-block
