--- a/Chalkable.Web/assets/jade/activities/profile/InfoView.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/InfoView.jade
@@ -26,8 +26,7 @@ mixin ProfileInfoView(model)
                 h1.display-name(data-tooltip=displayName, data-tooltip-type="overflow")=displayName
 
         .sections
-            .close-open-control.today-work-panel
-                h3=Msg.Student_info
+            +CloseOpen(Msg.Student_info).today-work-panel
                 .sections-info
                     .section-data
                         .info-title=Msg.Email
@@ -42,8 +41,7 @@ mixin ProfileInfoView(model)
                         .data-info
                             input(type="text", value=model.getBirthDateText(), readonly)
 
-            .close-open-control.today-work-panel
-                h3=Msg.Home_info
+            +CloseOpen(Msg.Home_info).today-work-panel
                 .sections-info
                     .section-data
                         .info-title=Msg.Home_Phone
