edit student grid styling

--- a/Chalkable.Web/assets/sass2/2_atoms/_form.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_form.sass
@@ -4,8 +4,11 @@
 
   label
     display: inline-block
-    min-width: 80px
+    min-width: 90px
     width: 25%
+
+  > *
+    vertical-align: top
 
 .form-buttons, .buttons-container
   margin-top: 10px
