--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -24,7 +24,7 @@
 @import "2_atoms/validation"
 @import "2_atoms/tooltip"
 @import "2_atoms/checkbox"
-@import "2_atoms/form"
+@import "2_atoms/_form"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
