--- a/Chalkable.Web/assets/sass2/1_quarks/_input.sass
+++ b/Chalkable.Web/assets/sass2/1_quarks/_input.sass
@@ -1,4 +1,4 @@
-input[type=text], select, textarea
+input[type=text], select, textarea, input[type=number], input[type=email]
   border: 1px solid #c8c7c3
   +box-shadow(transparentize(#000, .9) 0 1px 3px inset, transparentize(#fff, .5) 0 1px 1px)
   border-radius: 4px
@@ -10,6 +10,6 @@ input[type=text], select, textarea
   &[readonly]
     color: #aba9a5
 
-input[type=text], select
+input[type=text], select, input[type=number], input[type=email]
   line-height: 29px
   padding: 0 3px
