--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -24,7 +24,7 @@
 @import "2_atoms/validation"
 @import "2_atoms/tooltip"
 @import "2_atoms/checkbox"
-@import "2_atoms/_form"
+@import "2_atoms/form"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
@@ -44,7 +44,8 @@
 @import "3_molecules/glance-box"
 @import "3_molecules/paginator-container"
 
-@import "5_dialogs/_add-message"
+@import "5_dialogs/add-message"
+@import "5_dialogs/base-attachment-dialog"
 
 @import "6_popups/list-new-popup"
 
