--- a/Chalkable.Web/assets/sass2/5_dialogs/_base-attachment-dialog.sass
+++ b/Chalkable.Web/assets/sass2/5_dialogs/_base-attachment-dialog.sass
@@ -1,10 +1,17 @@
 .base-attachment-dialog
+  top: 32%
   width: 90%
-  height: 85%
+  height: 88%
+  background-color: transparent
+  overflow: visible
+  z-index: 2000
+
+  .x-close-btn
+    margin-top: -24px
 
   .toolbar
     position: absolute
-    top: -16px
+    top: -40px
 
     &.right-toolbar
       right: 25px
@@ -27,6 +34,29 @@
 
       &:hover
         opacity: 0.7
-    
-  
-  
+
+  .iframe-wrap
+    background: url(images/app/debut_dark.png)
+    border: 1px solid black
+    overflow-y: hidden
+    overflow-x: hidden
+    position: absolute
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+
+
+    .picture-container
+      position: absolute
+      top: 50%
+      left: 50%
+      transform: translate(-50%, -50%)
+
+    .picture-container-2
+      overflow-y: auto
+
+    iframe
+      border: 0
+      height: 100%
+      width: 100%
