--- a/Chalkable.Web/assets/jade/activities/grading/GradingStudentSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingStudentSummary.jade
@@ -28,4 +28,4 @@ topItems = topData.getTopItems()
             paramsPrepend = [null]
         )
             each announcement in self.announcements
-                +FeedItem(announcement)
+                +FeedItem(announcement, false, true)
