updated attachment window

--- a/Chalkable.Web/assets/sass2/5_dialogs/_base-attachment-dialog.sass
+++ b/Chalkable.Web/assets/sass2/5_dialogs/_base-attachment-dialog.sass
@@ -1,7 +1,9 @@
 .base-attachment-dialog
-  top: 32%
-  width: 90%
-  height: 88%
+  top: 50px
+  left: 90px
+  right: 90px
+  bottom: 10px
+  transform: none
   background-color: transparent
   overflow: visible
   z-index: 2000
