--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -62,7 +62,7 @@ mixin Glue_()
                             ).image-container
                                 +PersonImg(self.getOwner(), 47)
                 .description
-                    .popup-bubble
+                    .chat-bubble
                         h2(class=self.getExpiresDateColor())=self.getExpiresDateText()
                         p: +Glue_(self.getTitle(), self.getContent())
 
