--- a/Chalkable.Web/assets/jade/activities/apps/SuggestedAppsList.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/SuggestedAppsList.jade
@@ -1,16 +1,15 @@
 .suggested-apps-block
     .separator-line
     if self.getSuggestedApps()
-        .title Suggested Apps
-        .suggested-apps-container
-            each app in self.getSuggestedApps()
-                div.app-icon-link
-                    +ActionLink('apps', 'openSuggestedApp', app.getId(), self.getClassId(), self.getAnnouncementId()).app-link
-                        .app-list-item
+        +CloseOpen('Suggested Apps')
+            .suggested-apps-container.attachments-and-applications
+                each app, i in self.getSuggestedApps()
+                    div.app-icon-link.announcement-item.application
+                        -var pictureUrl = self.getAppPictureURL(app.getBigPictureId(), 170, 110)
                         if !app.needToInstall()
                             div(data-tooltip='Attach').attach-icon
-                        div(data-tooltip='').icon
-                            pictureUrl = self.getAppPictureURL(app.getBigPictureId(), 170, 110)
-                        img(src=pictureUrl)
+                        +LoadingImage(src=pictureUrl, id="loading-image-" + i)
+                        .title= app.getName()
+                        +ActionButton('apps', 'openSuggestedApp', app.getId(), self.getClassId(), self.getAnnouncementId()) Open
     else
         .title No recomended apps
