--- a/Chalkable.Web/assets/sass2/1_quarks/_button.sass
+++ b/Chalkable.Web/assets/sass2/1_quarks/_button.sass
@@ -56,6 +56,18 @@ button, input[type=button], input[type=submit], input[type=reset], input[type="f
     +box-shadow(transparentize(#000, .79) 0 1px 5px inset, #fff 0 1px 0)
     background-color: #fff
 
+  &.big-button
+    height: 52px
+    width: 218px
+    text-transform: uppercase
+    font-size: 17px
+
+    &+.grey-link, &+button, &+.action-link
+      margin-left: 21px
+
+.grey-link
+  font-style: italic
+
 .file
   position: relative
   z-index: 0
